force-app/main/default/objects/Project__c/fields/Active_for_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Active_for_Bookings__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active for Bookings</label>
    <type>Checkbox</type>
</CustomField>