force-app/main/default/objects/Project__c/fields/Available_Units__c.field-meta.xml
<CustomField>
    <fullName>Available_Units__c</fullName>
    <label>Available Units</label>
    <summarizedField>Tower__c.Available_Units__c</summarizedField>
    <summaryForeignKey>Tower__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>