force-app/main/default/objects/Project__c/fields/Booked_Units__c.field-meta.xml
<CustomField>
    <fullName>Booked_Units__c</fullName>
    <label>Booked Units</label>
    <summarizedField>Tower__c.Booked_Units__c</summarizedField>
    <summaryForeignKey>Tower__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>