force-app/main/default/objects/Project__c/fields/Brochure_URL__c.field-meta.xml
<CustomField>
    <fullName>Brochure_URL__c</fullName>
    <label>Brochure URL</label>
    <type>Url</type>
</CustomField>