force-app/main/default/objects/Project__c/fields/CC_Date__c.field-meta.xml
<CustomField>
    <fullName>CC_Date__c</fullName>
    <label>CC Date</label>
    <type>Date</type>
</CustomField>