force-app/main/default/objects/Project__c/fields/CC_Received__c.field-meta.xml
<CustomField>
    <fullName>CC_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Received</label>
    <type>Checkbox</type>
</CustomField>