force-app/main/default/objects/Project__c/fields/Club_Membership_Fee__c.field-meta.xml
<CustomField>
    <fullName>Club_Membership_Fee__c</fullName>
    <defaultValue>250000</defaultValue>
    <label>Club Membership Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>