force-app/main/default/objects/Project__c/fields/Covered_Parking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Covered_Parking_Fee__c</fullName>
    <defaultValue>500000</defaultValue>
    <label>Covered Parking Fee</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>