force-app/main/default/objects/Project__c/fields/Launch_Status__c.field-meta.xml
<CustomField>
    <fullName>Launch_Status__c</fullName>
    <label>Launch Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
                <default>true</default>
                <label>Planned</label>
            </value>
            <value>
                <fullName>Newly Launched</fullName>
            </value>
            <value>
                <fullName>Under Construction</fullName>
            </value>
            <value>
                <fullName>Ready-to-Move</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>