force-app/main/default/objects/Project__c/fields/Positioning__c.field-meta.xml
<CustomField>
    <fullName>Positioning__c</fullName>
    <label>Positioning</label>
    <length>255</length>
    <type>Text</type>
</CustomField>