force-app/main/default/objects/Project__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <externalId>true</externalId>
    <label>Project Code</label>
    <length>3</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
    <caseSensitive>true</caseSensitive>
</CustomField>