force-app/main/default/objects/Project__c/fields/Sellthrough_Pct__c.field-meta.xml
<CustomField>
    <fullName>Sellthrough_Pct__c</fullName>
    <formula>IF(Total_Units__c = 0, 0, (Booked_Units__c / Total_Units__c) * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sell-through %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>