force-app/main/default/objects/Project__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value><fullName>Andhra Pradesh</fullName><default>false</default><label>Andhra Pradesh</label></value>
            <value><fullName>Arunachal Pradesh</fullName><default>false</default><label>Arunachal Pradesh</label></value>
            <value><fullName>Assam</fullName><default>false</default><label>Assam</label></value>
            <value><fullName>Bihar</fullName><default>false</default><label>Bihar</label></value>
            <value><fullName>Chhattisgarh</fullName><default>false</default><label>Chhattisgarh</label></value>
            <value><fullName>Goa</fullName><default>false</default><label>Goa</label></value>
            <value><fullName>Gujarat</fullName><default>false</default><label>Gujarat</label></value>
            <value><fullName>Haryana</fullName><default>false</default><label>Haryana</label></value>
            <value><fullName>Himachal Pradesh</fullName><default>false</default><label>Himachal Pradesh</label></value>
            <value><fullName>Jharkhand</fullName><default>false</default><label>Jharkhand</label></value>
            <value><fullName>Karnataka</fullName><default>false</default><label>Karnataka</label></value>
            <value><fullName>Kerala</fullName><default>false</default><label>Kerala</label></value>
            <value><fullName>Madhya Pradesh</fullName><default>false</default><label>Madhya Pradesh</label></value>
            <value><fullName>Maharashtra</fullName><default>true</default><label>Maharashtra</label></value>
            <value><fullName>Manipur</fullName><default>false</default><label>Manipur</label></value>
            <value><fullName>Meghalaya</fullName><default>false</default><label>Meghalaya</label></value>
            <value><fullName>Mizoram</fullName><default>false</default><label>Mizoram</label></value>
            <value><fullName>Nagaland</fullName><default>false</default><label>Nagaland</label></value>
            <value><fullName>Odisha</fullName><default>false</default><label>Odisha</label></value>
            <value><fullName>Punjab</fullName><default>false</default><label>Punjab</label></value>
            <value><fullName>Rajasthan</fullName><default>false</default><label>Rajasthan</label></value>
            <value><fullName>Sikkim</fullName><default>false</default><label>Sikkim</label></value>
            <value><fullName>Tamil Nadu</fullName><default>false</default><label>Tamil Nadu</label></value>
            <value><fullName>Telangana</fullName><default>false</default><label>Telangana</label></value>
            <value><fullName>Tripura</fullName><default>false</default><label>Tripura</label></value>
            <value><fullName>Uttar Pradesh</fullName><default>false</default><label>Uttar Pradesh</label></value>
            <value><fullName>Uttarakhand</fullName><default>false</default><label>Uttarakhand</label></value>
            <value><fullName>West Bengal</fullName><default>false</default><label>West Bengal</label></value>
            <value><fullName>Delhi</fullName><default>false</default><label>Delhi</label></value>
            <value><fullName>Jammu and Kashmir</fullName><default>false</default><label>Jammu and Kashmir</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>