force-app/main/default/objects/Project__c/fields/Total_Towers__c.field-meta.xml
<CustomField>
    <fullName>Total_Towers__c</fullName>
    <label>Total Towers</label>
    <summaryForeignKey>Tower__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>