force-app/main/default/objects/Project__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <label>Total Units</label>
    <summarizedField>Tower__c.Total_Units__c</summarizedField>
    <summaryForeignKey>Tower__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>