force-app/main/default/objects/Project__c/validationRules/Project_Code_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Code_Format</fullName>
    <active>true</active>
    <description>Project_Code__c must be exactly 3 uppercase ASCII letters (e.g., PRK, GAL). Enforced per Naming Convention Appendix Section 7.</description>
    <errorConditionFormula>NOT(REGEX(Project_Code__c, &quot;^[A-Z]{3}$&quot;))</errorConditionFormula>
    <errorDisplayField>Project_Code__c</errorDisplayField>
    <errorMessage>Project Code must be exactly 3 uppercase letters (e.g., PRK).</errorMessage>
</ValidationRule>